# anker-solix-influx

./: .gitignore  README.md  pyproject.toml  test_device_fields.py  test_field_extraction.py
scripts/: solix-live.service
src/anker_solix_influx/: __init__.py  config.py  legacy_import.py  live_service.py
tests/: test_influx_connection.py
