[project]
name = "anker-solix-influx"
version = "0.1.0"
description = "Export Anker Solix MI80 solar data to InfluxDB v1.8"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # Anker Solix API (local editable install from cloned repo)
    "anker-solix-api @ git+https://github.com/thomluther/anker-solix-api.git",
    # InfluxDB v1 client
    "influxdb>=5.3.2",
    # Config via .env
    "python-dotenv>=1.0.0",
    # Async HTTP (required by anker-solix-api)
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.0",
    # Crypto (required by anker-solix-api)
    "cryptography>=42.0.0",
    # MQTT (required by anker-solix-api)
    "paho-mqtt>=1.6.1",
]

[project.scripts]
solix-legacy-import = "anker_solix_influx.legacy_import:main_cli"
solix-live-service  = "anker_solix_influx.live_service:main_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anker_solix_influx"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "ruff>=0.4.0",
]
